Implemented some IntelliJ IDE suggestions